Added version selection for templates
